# advent-of-code

./: .gitignore
2023/rust/: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain  shell.nix
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/src/: part1.rs  part2.rs
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/benches/: benchmarks.rs
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/benches/: benchmarks.rs
2023/rust/day-02/src/: part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/benches/: benchmarks.rs
2023/rust/day-03/src/: part1.rs  part2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/benches/: benchmarks.rs
2023/rust/day-04/src/: part1.rs  part2.rs
2023/rust/day-05/: Cargo.toml
2023/rust/day-05/benches/: benchmarks.rs
2023/rust/day-05/src/: lib.rs  part1.rs  part2.rs
2023/rust/day-06/: Cargo.toml
2023/rust/day-06/benches/: benchmarks.rs
2023/rust/day-06/src/: part1.rs  part2.rs
2023/rust/day-07/: Cargo.toml
2023/rust/day-07/benches/: benchmarks.rs
2023/rust/day-07/src/: part1.rs  part2.rs
2023/rust/day-08/: Cargo.toml
2023/rust/day-08/benches/: benchmarks.rs
2023/rust/day-08/src/: part1.rs  part2.rs
2024/rust/: Cargo.toml  README.md  flake.nix  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/benches/: benchmarks.rs
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
