[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
criterion = "0.5.1"
dhat = "0.3.3"
rstest = "0.18.2"
indoc = "2.0.4"
regex = "1.10.3"
colored = "2.1.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
miette = { version = "7.0.0", features = ["fancy"] }
thiserror = "1.0.56"
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }
rayon = "1.8.1"
indicatif = { version = "0.17.8", features = ["rayon"] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
