[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
itertools = "0.13"
criterion = "0.5"
dhat = "0.3"
rstest = "0.23"
indoc = "2.0"
regex = "1.11"
colored = "2.1"
nom = "7.1"
nom-supreme = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1
