[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
itertools = "0.13.0"
divan = "0.1.16"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
colored = "2.1.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0.3"
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
rayon = "1.10.0"
indicatif = { version = "0.17", features = ["rayon"] }
