[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
dhat.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nom.workspace = true
nom-supreme.workspace = true
miette.workspace = true
thiserror.workspace = true
rayon.workspace = true
indicatif.workspace = true

[dev-dependencies]
criterion.workspace = true
indoc.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day-05-bench"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
